# hgss_archipelago

./: .gitignore  Makefile  README.md  __init__.py  archipelago.json  client.py  connector_desmume_generic.lua  items.py  locations.py  options.py  patch_gen.py  regions.py  rom.py  rules.py
.github/workflows/: fuzz.yml  release.yml  tests.yml
apnds/: CHANGELOG.md  README.md  pyproject.toml
apnds/apnds/: __init__.py  aes.py  code.py  lz.py  narc.py  rom.py
apnds/docs/: .gitignore
apnds/docs/source/: conf.py  index.rst
apnds/docs/source/_templates/autosummary/: module.rst
data_gen/: event_checks.toml  items.toml  locations.toml  regions.toml  rom_interface.toml  rules.toml  species.toml
data_gen_templates/: locations.py  rules.py
docs/: en_Pokemon HeartGold_SoulSilver.md  setup_en.md
patches/: base_patch_us_hg.bsdiff4  base_patch_us_ss.bsdiff4
tools/: desmume_luasocket_setup.sh
